# tasklib3

./: CMakeLists.txt  README.md
include/: tasklib3.h
src/: main.cpp  tasklib3.cpp  tasklib3.h
